--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -314,13 +314,19 @@ dg %>%
 
 Next, for each state, we quantify the proportion of Tiers in each "water size category" according to [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000){target="_blank"}:  
  
-| EPA classification | Connection count    |
-|--------------------|---------------------|
-| Very Small         |  500 or less        |
-| Small              |  501 - 3,300        |
-| Medium             |  3,301 - 10,000     |
-| Large              |  10,001 - 100,000   |  
-| Very Large         |  >100,000           |
+ 
+```{r epa sys size}
+tribble(
+~`EPA classification`, ~`Connection count`,
+ "Very Small",            "500 or less",
+ "Small",                 "501 - 3,300",
+ "Medium",                "3,301 - 10,000",
+ "Large",                 "10,001 - 100,000",
+ "Very Large",            ">100,000"
+) %>% 
+  kable(align = rep("l", 2)) %>% 
+  kableExtra::kable_styling(full_width = FALSE)
+```
 
 
 In states that lack Tier 1 boundaries, "Very Small" and "Small" systems tend to have higher proportions of Tier 3 boundaries (grey bars) compared to larger systems. This result is unsurprising because Tier 2 spatial matches hinge on connecting water systems to Census "Places" which tend to be more populous areas. We therefore expect that smaller systems lack a Tier 2 match, and are hence covered by Tier 3 boundaries. 
